--- a/start/app/src/main/res/values/strings.xml
+++ b/start/app/src/main/res/values/strings.xml
@@ -13,12 +13,13 @@
     <!-- LoginScreen -->
     <string name="sign_in">Sign in</string>
     <string name="login_details">Enter your login details</string>
-    <string name="forgot_password">Forgot password? Click to get recovery email</string>
+    <string name="sign_up">Sign up</string>
     <string name="recovery_email_sent">Check your inbox for the recovery email.</string>
     <string name="empty_password_error">Password cannot be empty.</string>
 
     <!-- SignUpScreen -->
     <string name="create_account">Create account</string>
+    <string name="nav_to_sign_in">Already have an account? Sign in.</string>
     <string name="password_error">Your password should have at least six digits and include one digit, one lower case letter and one upper case letter.</string>
     <string name="password_match_error">Passwords do not match.</string>
 
