--- a/start/app/src/main/res/values/strings.xml
+++ b/start/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="request_notification_permission">Request permission</string>
     <string name="notification_permission_title">Notification permission</string>
     <string name="notification_permission_description">The notification permission is important for this app. Please grant the permission.</string>
+    <string name="storage_permission_description">You have to provide storage access permission to choose new avatar.</string>
     <string name="notification_permission_settings">The notification permission is important for this app. Please navigate to your device settings and enable notifications for Make it So.</string>
     <string name="auth_type">Auth type: %1$s</string>
     <string name="log_in_with_google">Sign in with Google</string>
